added some language

--- a/swac/components/Worldmap2d/plugins/Navigation/navigation.html
+++ b/swac/components/Worldmap2d/plugins/Navigation/navigation.html
@@ -107,7 +107,8 @@
                 <!-- Conditional: Route speichern -->
                 <button
                     class="navigation-route-save-button uk-button uk-button-primary uk-margin-small-top"
-                    style="display:none">
+                    style="display:none"
+                    swac_lang="Worldmap2d_Navigation.save_route">
                     Route speichern
                 </button>
 
